--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,22 @@
+# sonar.projectKey=stickyNote
+# sonar.projectName=stickyNote
+# sonar.sourceEncoding=UTF-8
+# sonar.sources="./src"
+# sonar.exclusions=node_modules/*,Docker*,init_container.sh,**/*.test.*,client /coverage/lcov.info,coverage/lcov-report/*,src/Utils/*,src/setupTests.js,src/serviceWorker.js
+# sonar.tests=src
+# sonar.test.inclusions=**/*test*
+# sonar.dynamicAnalysis=reuseReports
+# sonar.log.level=DEBUG
+# sonar.verbose=true
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
 sonar.projectKey=stickyNote
 sonar.projectName=stickyNote
+sonar.projectVersion=1.0
+sonar.sources=src
 sonar.sourceEncoding=UTF-8
-sonar.sources="./src"
-sonar.exclusions=node_modules/*,Docker*,init_container.sh,**/*.test.*,client /coverage/lcov.info,coverage/lcov-report/*,src/Utils/*,src/setupTests.js,src/serviceWorker.js
-sonar.tests=src
-sonar.test.inclusions=**/*test*
-sonar.dynamicAnalysis=reuseReports
-sonar.log.level=DEBUG
-sonar.verbose=true
+sonar.exclusions=node_modules/*,**/coverage/**,src/index.js,src/reportWebVitals.js,src/App.test.js,src/setupTests.js
+# Optional
+sonar.test.inclusions=**/*.test 
+# To import the LCOV report
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
