updated sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.projectName=stickyNote
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=node_modules/*,**/coverage/**,src/index.js,src/reportWebVitals.js,src/App.test.js,src/setupTests.js,.**/*.test.*
+sonar.exclusions=node_modules/*,Docker*,init_container.sh,**/*.test.*,client /coverage/lcov.info,coverage/lcov-report/*,src/Utils/*,src/setupTests.js,src/serviceWorker.js,src/reportWebVitals.js
 # Optional
 sonar.test.inclusions=**/*.test 
 # To import the LCOV report
